# cudarc

./: .gitignore  Cargo.toml  README.md  bindgen.py  build.rs  docker-bindgen.sh  generating-bindings.md  install-bindgen.sh  run-bindgen.sh
.gemini/: config.yaml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: cargo-check.yaml  cargo-clippy.yaml  cargo-publish-dry-run.yaml
bindings_generator/: Cargo.toml  README.md
bindings_generator/include/: cuda_profiler_api.h
bindings_generator/src/: download.rs  main.rs  merge.rs
examples/: 01-allocate.rs  02-copy.rs  03-launch-kernel.rs  04-streams.rs  05-device-repr.rs  06-threading.rs  07-symbol.rs  08-cupti.rs  08-rust-kernel.rs  09-constant-memory.rs  10-function-attributes.rs  11-pitched-memory.rs  12-context-config.rs  constant_memory.cu  constant_memory.ptx  cublas.rs  cuda-launch-kernel-lifetime.rs  cuda-launch-kernel-result.rs  cuda-mem-async-result.rs  cudnn2.rs  cufile-copy.rs  devices-refcount.rs  devices.rs  kernels.rs  launch-kernel-refcount.rs  launch-kernel.rs  matmul-kernel.rs  nvrtc-compile-result.rs  nvrtc-compile.rs  nvtx-range.rs  random.rs  simple-matmul.rs
examples/07-build-workflow/: Cargo.toml  build.rs  main.rs
examples/07-build-workflow/src/: main.rs
examples/rust-kernel/: Cargo.toml
examples/rust-kernel/src/: device.rs  lib.rs
helper/: .gitignore  Cargo.toml  output.rs
helper/include/: cudaProfiler.h
helper/src/: adapter.rs  extract.rs  main.rs  merge.rs  output.rs
src/: arrays.rs  blas.rs  compile.rs  cudarc.rs  device.rs  jit.rs  lib.rs  rng.rs  types.rs
src/cublas/: bindgen.sh  gemv.rs  mod.rs  result.rs  safe.rs  sys.rs  tensor.rs
src/cublas/safe/: asum.rs  gemm.rs  gemv.rs  gmm.rs  mod.rs
src/cublas/sys/: bindgen.sh  mod.rs  sys_11040.rs  sys_11050.rs  sys_11060.rs  sys_11070.rs  sys_11080.rs  sys_12000.rs  sys_12010.rs  sys_12020.rs  sys_12030.rs  sys_12040.rs  sys_12050.rs  sys_12060.rs  sys_12080.rs  wrapper.h
src/cublaslt/: bindgen.sh  mod.rs  result.rs  safe.rs  sys.rs
src/cublaslt/sys/: bindgen.sh  mod.rs  sys_11040.rs  sys_11050.rs  sys_11060.rs  sys_11070.rs  sys_11080.rs  sys_12000.rs  sys_12010.rs  sys_12020.rs  sys_12030.rs  sys_12040.rs  sys_12050.rs  sys_12060.rs  sys_12080.rs  wrapper.h
src/cuda/: borrow.rs  mod.rs  rc.rs  refcount.rs  result.rs  sys.rs
src/cudart/sys/: bindgen.sh  sys_12050.rs
src/cudnn/: activation.rs  activation_mode.rs  algorithm_with_workspace.rs  batch_normalization.rs  bindgen.sh  compile_cudnn_kernels.sh  compile_custom_kernels.sh  cuda_cudnn_result.rs  cudnn_kernel_functions_names.rs  cudnn_kernels.cu  custom_kernel_functions_names.rs  custom_kernels.ptx  data_type.rs  format_cudnn.sh  mod.rs  pooling2d.rs  result.rs  safe.rs  sys.rs  tensor.rs  tensor_ops.rs  workspace.rs
src/cudnn/activation/: mod.rs  mode.rs  simple_activations.rs  softmax.rs
src/cudnn/batch_normalization/: backward.rs  forward.rs  mod.rs
src/cudnn/conv/: algorithm_with_workspace.rs  backward.rs  filter.rs  filter_backward.rs  forward.rs  mod.rs
src/cudnn/custom_kernels/: f_kernels.cu
src/cudnn/safe/: activation.rs  conv.rs  core.rs  mod.rs  pooling.rs  reduce.rs  softmax.rs
src/cudnn/sys/: bindgen.sh  mod.rs  sys_11040.rs  sys_11050.rs  sys_11060.rs  sys_11070.rs  sys_11080.rs  sys_12000.rs  sys_12010.rs  sys_12020.rs  sys_12030.rs  sys_12040.rs  sys_12050.rs  sys_12060.rs  sys_12080.rs  tmp.rs  wrapper.h
src/cudnn/tensor/: data.rs  data_type.rs  descriptor.rs  mod.rs  tensor4d.rs
src/cudnn/tensor_ops/: descriptor.rs  mod.rs  operation.rs  tensor_ops.rs
src/cufft/: result.rs
src/cufft/sys/: mod.rs  wrapper.h
src/cufile/: mod.rs  result.rs  safe.rs
src/cufile/sys/: mod.rs  wrapper.h
src/cupti/: mod.rs  result.rs
src/cupti/result/: activity.rs  mod.rs
src/cupti/sys/: mod.rs  wrapper.h
src/curand/: bindgen.sh  mod.rs  result.rs  safe.rs  sys.rs
src/curand/sys/: bindgen.sh  mod.rs  sys_11040.rs  sys_11050.rs  sys_11060.rs  sys_11070.rs  sys_11080.rs  sys_12000.rs  sys_12010.rs  sys_12020.rs  sys_12030.rs  sys_12040.rs  sys_12050.rs  sys_12060.rs  sys_12080.rs  wrapper.h
src/cusolver/: mod.rs  result.rs  safe.rs  sys_test.rs
src/cusolver/sys/: mod.rs  wrapper.h
src/cusolvermg/: mod.rs  result.rs  safe.rs
src/cusolvermg/sys/: mod.rs  wrapper.h
src/cusparse/: mod.rs  result.rs
src/cusparse/sys/: mod.rs  wrapper.h
src/cutensor/: mod.rs  result.rs
src/cutensor/safe/: mod.rs
src/cutensor/sys/: mod.rs  wrapper.h
src/driver/: bindgen.sh  mod.rs  result.rs  safe.rs  sys.rs  wrapper.h
src/driver/safe/: alloc.rs  build.rs  core.rs  device_ptr.rs  external_memory.rs  graph.rs  host_slice.rs  launch.rs  mod.rs  profile.rs  ptx.rs  threading.rs  unified_memory.rs
src/driver/sys/: bindgen.sh  libloading.rs  mod.rs  sys_11040.rs  sys_11050.rs  sys_11060.rs  sys_11070.rs  sys_11080.rs  sys_12000.rs  sys_12010.rs  sys_12020.rs  sys_12030.rs  sys_12040.rs  sys_12050.rs  sys_12060.rs  sys_12080.rs
src/nccl/: bindgen.sh  mod.rs  result.rs  safe.rs  sys.rs
src/nccl/sys/: bindgen.sh  mod.rs  sys_11040.rs  sys_11050.rs  sys_11060.rs  sys_11070.rs  sys_11080.rs  sys_12000.rs  sys_12010.rs  sys_12020.rs  sys_12030.rs  sys_12040.rs  sys_12050.rs  sys_12060.rs  sys_12080.rs  wrapper.h
src/nvrtc/: bindgen.sh  compile.rs  mod.rs  result.rs  safe.rs  sys.rs
src/nvrtc/sys/: bindgen.sh  mod.rs  sys_11040.rs  sys_11050.rs  sys_11060.rs  sys_11070.rs  sys_11080.rs  sys_12000.rs  sys_12010.rs  sys_12020.rs  sys_12030.rs  sys_12040.rs  sys_12050.rs  sys_12060.rs  sys_12080.rs  wrapper.h
src/nvtx/: mod.rs  result.rs  safe.rs
src/nvtx/sys/: bindgen.sh  extern.c  mod.rs  sys_12040.rs  wrapper.h
src/profiler/: mod.rs  result.rs  safe.rs  wrapper.h
src/runtime/: mod.rs  result.rs
src/runtime/safe/: alloc.rs  core.rs  device_ptr.rs  external_memory.rs  launch.rs  mod.rs  profile.rs  ptx.rs  threading.rs
src/runtime/sys/: bindgen.sh  mod.rs  sys_11040.rs  sys_11050.rs  sys_11060.rs  sys_11070.rs  sys_11080.rs  sys_12000.rs  sys_12010.rs  sys_12020.rs  sys_12030.rs  sys_12040.rs  wrapper.h  (+4 more)
src/tensorrt/: mod.rs  result.rs
(+100 files in other folders)
