[package]
name = "cudarc"
version = "0.12.0"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Safe wrappers around CUDA apis"
homepage = "https://github.com/coreylowman/cudarc"
documentation = "https://docs.rs/cudarc"
repository = "https://github.com/coreylowman/cudarc"
readme = "README.md"

keywords = [
    "cuda",
    "nvidia",
    "gpu",
    "nvrtc",
    "cublas",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["cuda-12060", "f16", "cudnn"]

[features]
default = ["std", "cublas", "cublaslt", "curand", "driver", "nvrtc"]

cuda-version-from-build-system = []
cuda-11040 = []
cuda-11050 = []
cuda-11060 = []
cuda-11070 = []
cuda-11080 = []
cuda-12000 = []
cuda-12010 = []
cuda-12020 = []
cuda-12030 = []
cuda-12040 = []
cuda-12050 = []
cuda-12060 = []

dynamic-linking = []

nvrtc = []
driver = ["nvrtc"]
cublas = ["driver"]
cublaslt = ["driver"]
cudnn = ["driver"]
curand = ["driver"]
nccl = ["driver"]

std = []
no-std = ["no-std-compat/std", "dep:spin"]
f16 = ["dep:half"]

[dependencies]
spin = { version = "0.9.8", optional = true, features = ["rwlock"], default-features = false }
no-std-compat = { version = "0.4.1", optional = true, features = [ "alloc" ] }
half = { version = "2.4.1", optional = true, default-features = false, features = ["num-traits", "rand_distr"] }
libloading = "0.8.5"
