[package]
name = "cudarc"
version = "0.17.2"
edition = "2021"
authors = ["Corey Lowman <clowman1993@gmail.com>"]
license = "MIT OR Apache-2.0"

description = "Safe and minimal CUDA bindings"
homepage = "https://github.com/coreylowman/cudarc"
documentation = "https://docs.rs/cudarc"
repository = "https://github.com/coreylowman/cudarc"
readme = "README.md"

keywords = ["cuda", "nvidia", "gpu", "cudnn", "cublas"]
categories = [
    "api-bindings",
    "hardware-support",
    "memory-management",
    "no-std",
    "science",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = [
    "cuda-12090",
    "f16",
    "cudnn",
    "nccl",
    "cusparse",
    "cusolver",
    "cusolvermg",
    "cufile",
]

[features]
default = [
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "driver",
    "runtime",
    "nvrtc",
    "dynamic-loading",
]

cuda-version-from-build-system = []
cuda-11040 = []
cuda-11050 = []
cuda-11060 = []
cuda-11070 = []
cuda-11080 = []
cuda-12000 = []
cuda-12010 = []
cuda-12020 = []
cuda-12030 = []
cuda-12040 = []
cuda-12050 = []
cuda-12060 = []
cuda-12080 = []
cuda-12090 = []
cuda-13000 = []

dynamic-loading = []
dynamic-linking = []
static-linking = []

nvrtc = []
driver = ["nvrtc"]
cublas = ["driver"]
cublaslt = ["driver"]
runtime = ["driver"]
cudnn = ["driver"]
curand = ["driver"]
nccl = ["driver"]
cusparse = ["driver"]
cusolver = ["driver", "cublas", "cublaslt", "cusparse"]
cusolvermg = ["cusolver"]
cufile = ["driver"]

std = []
no-std = ["no-std-compat/std"]
f16 = ["dep:half"]
f8 = ["f16", "dep:float8"]
f4 = ["f16", "f8", "dep:float4"]

[dependencies]
no-std-compat = { version = "0.4.1", optional = true, features = ["alloc"] }
half = { version = "2", optional = true, default-features = false, features = [
    "num-traits",
    "rand_distr",
] }
float8 = { version = "0.3.0", optional = true }
float4 = { version = "0.1.0", optional = true }
libloading = "0.8"

[dev-dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"
